--- a/templates/cref.tmpl
+++ b/templates/cref.tmpl
@@ -1,4 +1,6 @@
 <GoogleCustomizations>
+
+  {% if name and nickname %} 
   <CustomSearchEngine>
     <Title>{{ name }}</Title>
     <Description>
@@ -10,8 +12,11 @@
       </BackgroundLabels>
     </Context>
   </CustomSearchEngine>
+  {% endif %}
+
   <Annotations>
 
+    {% if nickname %}
     <Annotation about="friendfeed.com/{{ nickname }}">
       <Label name="include"/>
     </Annotation>  
@@ -35,6 +40,7 @@
     <Annotation about="friendfeed.com/{{ nickname }}/comments?start=*"  score="1.0">
       <Label name="include"/>
     </Annotation>
+    {% endif %}
 
     {% for cse_name in cse_names %}
     <Annotation about="{{ cse_name }}" score="0.5">
