--- a/trunk/templates/annotations.tmpl
+++ b/trunk/templates/annotations.tmpl
@@ -1,5 +1,6 @@
 <Annotations>
 
+  {% if nickname %}
   <Annotation about="friendfeed.com/{{ nickname }}">
     <Label name="include"/>
   </Annotation>  
@@ -23,6 +24,8 @@
   <Annotation about="friendfeed.com/{{ nickname }}/comments?start=*"  score="1.0">
     <Label name="include"/>
   </Annotation>
+
+  {% endif %}
 
   {% for cse_name in cse_names %}
   <Annotation about="{{ cse_name }}" score="0.5">
