--- a/trunk/templates/annotation_list.tmpl
+++ b/trunk/templates/annotation_list.tmpl
@@ -1,3 +1,5 @@
+<!-- Annotations for {{ nickname }} -->
+
 <Annotation about="friendfeed.com/{{ nickname }}">
   <Label name="include"/>
 </Annotation>  
