--- a/trunk/templates/cref.tmpl
+++ b/trunk/templates/cref.tmpl
@@ -11,6 +11,15 @@
         <Label name="include" mode="FILTER"/>
       </BackgroundLabels>
     </Context>
+
+    <LookAndFeel>
+      <Logo url="http://ego-ego.appspot.com/images/ego_logo.png" destination="http://ego-ego.appspot.com/friendfeed/{{ nickname }}/" height="32" />
+    </LookAndFeel>
+
+    <AdSense>
+      <Client id="pub-3230649185001151" />
+    </AdSense>
+
   </CustomSearchEngine>
   {% endif %}
 
