Updated searchbar graphic

--- a/templates/user.tmpl
+++ b/templates/user.tmpl
@@ -21,7 +21,7 @@
       </p>
 
       <p class="snippet">
-        <img src="/images/dropdown_small.png"/>
+        <img src="/images/ego_searchbar.png"/>
       </p>
     </div>
 
